Fixed missing background image in MAKE CONTACT section -> all pages

--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,10 @@ body {
 }
 
 /* MAKE CONTACT */
+.make__contact {
+  background: url("../images/footer-image.png") no-repeat;
+  background-size: cover;
+}
 
 .make__contact_container {
   min-height: 448px;
